# wayfarer-multiagent

./: .env.example  .flake8  .gitignore  API_DOCS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FAQ.md  LICENSE  Makefile  README.md  SECURITY.md  TEST.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  test_deployment.txt  todos.md  utils.py
.github/workflows/: ci-cd.yml
scratch/: test_db.py
tests/: __init__.py  test_application.py  test_chitchat_agent.py  test_final_agent.py  test_flight_agent.py  test_hotel_agent.py  test_integration.py  test_itinerary_agent.py  test_main.py  test_planner_agent.py  test_router_agent.py  test_tools.py  test_utils.py
tools/: flight_tool.py  tavily_tool.py
